--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,63 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+}
+:root {
+  --primary-bg-color: rgb(55, 53, 53); 
+  --primary-border-color: white;           
+  --primary-text-color: white;
+  --primary-button-color: rgb(47, 104, 210);
+  --primary-button-text-color: white;
+  --description-font-size:12px;
+  --primary-heading-font-size:16px;  
+  --favicon-font-size-check:30px; 
+  --completed-steps-font-size:20px;
+  --box-shadow-config: 0px 0px 10px rgba(252, 250, 250, 1);               
 }
 
-.lz{
-  height: 170px;
-  width: 200px;
-  margin-left: 10px;
-  margin-top: 10px;
+.auth-container, .auth-success-container, .selected_lz{
+  border: 1px solid var(--primary-border-color);
+  border-radius: 5px;
+  background-color: var(--primary-bg-color);
+  display: flex;
+  flex-direction: column;
+  color: var(--primary-text-color);
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: var(--box-shadow-config);
+}
+.auth-success-container{
+  flex-direction: row;
+  font-size: var(--completed-steps-font-size);
+}
+.auth-success-container i{
+  color: var(--primary-button-color);
+  font-size: var(--favicon-font-size-check);
+  margin-right: 12px;
+}
+.auth-container input{
+  color: white;
+}
+.upload-message{
+  margin-bottom: 10px;
+  color:green;
+}
+.auth-container button{
+  margin-top: 7px;
+  height: 35px;
+  width: 120px;
+  background-color: var(--primary-button-color);
+  color: var(--primary-button-text-color);
+  border-radius: 5px;
+  border-width: 0px;
+  box-shadow: var(--box-shadow-config);
 }
 
-.lz:hover{
+.auth-container button:hover{
   cursor: pointer;
+}
+
+.auth-container p{
+  color: var(--primary-text-color);
+  font-size: var(--description-font-size);
 }
