--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,42 @@ a:hover {
 
 body {
   margin: 0;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: black;
 }
 
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltip-text {
+  visibility: hidden;
+  min-width: 300px;
+  width: auto; 
+  background-color: white; 
+  color: black;
+  text-align: center;
+  border-radius: 5px;
+  border: 2px solid black;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -75px; 
+  opacity: 0;
+  transition: opacity 0.3s; 
+  font-size: var(--description-font-size);
+}
+
+.tooltip:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1; 
+}
+
+.tooltip-icon {
+  cursor: pointer;
+}
